# arkworks_zkregex_generator

./: Cargo.toml  generated_circuit.rs  run_circuit.rs  run_example.sh
example/: Cargo.toml
example/src/: _main.rs  generated_circuit.rs  main.rs
src/: arkworks.rs  errors.rs  handlers.rs  main.rs  regex.rs  test_circuit.rs
